# SolanaPvP

./: .gitignore  API_EXAMPLES.md  CURRENT_ISSUES.md  LIVE_MATCH_FEED_PLAN.md  PLINKO_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SolanaPvP.sln  futureGames.md  migrate.ps1  migrate.sh
API/: ADMIN_KEYPAIR_SETUP.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  RESOLVE_BOT_SETUP.md  generate-bot-keypair.js
API/SolanaPvP.API_Project/: Program.cs  SolanaPvP.API_Project.csproj  SolanaPvP.API_Project.http  appsettings.Development.json  appsettings.json  solanapvp.db  solanapvp.db-shm  solanapvp.db-wal
API/SolanaPvP.API_Project/Controllers/: HealthController.cs  InvitationsController.cs  LeaderboardController.cs  MatchesController.cs  RandomnessController.cs  UsersController.cs
API/SolanaPvP.API_Project/Extensions/: HttpContextExtensions.cs
API/SolanaPvP.API_Project/Hubs/: MatchHub.cs
API/SolanaPvP.API_Project/Middleware/: PubkeyMiddleware.cs
API/SolanaPvP.API_Project/Properties/: launchSettings.json
API/SolanaPvP.API_Project/Workers/: GameTimeoutWorker.cs  IndexerWorker.cs  RandomnessPoolWorker.cs  RefundBotWorker.cs  ResolveBotWorker.cs
API/SolanaPvP.API_Project/wwwroot/: index.html
API/SolanaPvP.Application/: DependencyInjection.cs  SolanaPvP.Application.csproj
API/SolanaPvP.Domain/: SolanaPvP.Domain.csproj
API/SolanaPvP.Domain/Enums/: EventKind.cs  GameModeType.cs  GameType.cs  InvitationStatus.cs  MatchMode.cs  MatchStatus.cs  MatchType.cs  RandomnessAccountStatus.cs  TeamSize.cs
API/SolanaPvP.Domain/Helpers/: GameConfig.cs  GameModeMapper.cs
API/SolanaPvP.Domain/Models/: Event.cs  GameData.cs  Match.cs  MatchInvitation.cs  MatchParticipant.cs  RandomnessPoolAccount.cs  RefundTask.cs  User.cs
API/SolanaPvP.Domain/Settings/: CommissionSettings.cs  IndexerSettings.cs  RefundSettings.cs  SolanaSettings.cs  SwitchboardSettings.cs
API/SolanaPvP.EF_Core/: DependencyInjection.cs  SolanaPvP.EF_Core.csproj
API/SolanaPvP.EF_Core/Context/: SolanaPvPDbContext.cs
API/SolanaPvP.EF_Core/DBOs/: EventDBO.cs  GameDataDBO.cs  MatchDBO.cs  MatchInvitationDBO.cs  MatchParticipantDBO.cs  RandomnessPoolDBO.cs  RefundTaskDBO.cs  UserDBO.cs
API/SolanaPvP.EF_Core/Mappers/: EventMapper.cs  GameDataMapper.cs  MatchInvitationMapper.cs  MatchMapper.cs  MatchParticipantMapper.cs  RandomnessPoolMapper.cs  UserMapper.cs
API/SolanaPvP.EF_Core/Repositories/: EventRepository.cs  IEventRepository.cs  IMatchInvitationRepository.cs  IMatchRepository.cs  IRefundTaskRepository.cs  IUserRepository.cs  MatchInvitationRepository.cs  MatchRepository.cs  RandomnessPoolRepository.cs  RefundTaskRepository.cs  UserRepository.cs
API/SolanaPvP.Infrastructure/: DependencyInjection.cs  SolanaPvP.Infrastructure.csproj
API/SolanaPvP.SolanaRPC/: DependencyInjection.cs  SolanaPvP.SolanaRPC.csproj  package-lock.json
FRONT/SolanaPvP.Front/: MINER_GAME_PROBLEMS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
Solana_SC/: Anchor.toml  BUILD_AND_DEPLOY.md  Cargo.toml  DEPLOYMENT.md  INTEGRATION.md  README-WSL.md  README.md  SETUP.md  SWITCHBOARD_ONDEMAND_MIGRATION.md  SWITCHBOARD_RANDOMNESS.md  TROUBLESHOOTING.md  USAGE.md  airdrop-devnet.ps1  build-and-copy-idl.sh  build.ps1  cleanup-windows.ps1  copy-idl-after-build.ps1  copy-idl-manual.sh  copy-idl-to-frontend.ps1  deploy-devnet.ps1  deploy-mainnet.ps1  download-idl.js  download-idl.ps1  env.devnet  env.mainnet  export-private-key.js  final.txt  generate-idl.sh  get-program-id.js  get-program-id.ts  orig.txt  orig2.txt  package-lock.json  package.json  security.txt  setup-wsl.sh  temp_keypair.json  test.ps1  tsconfig.json  verify-program-id.py
Solana_SC/migrations/: deploy.ts
Solana_SC/programs/pvp_program/: Cargo.toml  Cargo.toml.backup.20251031_000724  Xargo.toml
Solana_SC/programs/pvp_program/src/: lib.rs
Solana_SC/tests/: pvp_program.ts
(+257 files in other folders)
