[workspace]
members = [
    "programs/pvp_program"
]
resolver = "2"

# [workspace.dependencies]
# # Force compatible versions to resolve conflicts
# zeroize = "1.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = "z"
overflow-checks = true
