[workspace]
members = [
    "programs/pvp_program"
]
resolver = "2"

# Fix proc-macro2 for anchor-syn 0.30.1 - pin to last version with source_file()
[workspace.dependencies]
proc-macro2 = "=1.0.94"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = "z"
overflow-checks = true
