[workspace]
members = [
    "programs/pvp_program"
]
resolver = "2"

# Fix dependency versions for rustc 1.79 (shipped with Solana 2.1.0)
[workspace.dependencies]
indexmap = "=2.6.0"  # Last version supporting rustc 1.79

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = "z"
overflow-checks = true
