[package]
name = "pvp_program"
version = "1.0.0"
description = "Solana PvP Game Program with Orao VRF"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pvp_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
# Orao VRF - use latest from GitHub (fully compatible with Anchor 0.31.1)
# no-entrypoint disables global allocator to avoid conflict with Anchor
orao-solana-vrf = { git = "https://github.com/orao-network/solana-vrf", default-features = false, features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"
sha2 = "0.10"
# Fix indexmap for rustc 1.79 compatibility
indexmap = { workspace = true }

# anchor-spl = "0.28"  # Removed to avoid Solana version conflicts
# sha2 = "0.10"
# rand = "0.8"  # Not supported in Solana BPF - uses getrandom which doesn't work
# rand_chacha = "0.3"  # Not supported in Solana BPF
# Using crates.io version - we'll need to handle compatibility differently
# or potentially downgrade Anchor version if switchboard-v2 doesn't support Solana 2.x yet
# Temporarily disable switchboard-v2 due to version conflicts
# TODO: Find compatible version or alternative VRF solution
# switchboard-v2 = "0.4.0"  # Temporarily disabled - version incompatible with Anchor 0.31

